--- a/reports/debug/org.flyve.inventory.agent.IdlingResource/RecycleViewIdlingResource.java.html
+++ b/reports/debug/org.flyve.inventory.agent.IdlingResource/RecycleViewIdlingResource.java.html
@@ -1,7 +1,4 @@
----
-layout: coverage
----
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../resources/report.css" type="text/css"/><link rel="shortcut icon" href="../resources/report.gif" type="image/gif"/><title>RecycleViewIdlingResource.java</title><link rel="stylesheet" href="../resources/prettify.css" type="text/css"/><script type="text/javascript" src="../resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.IdlingResource</a> &gt; <span class="el_source">RecycleViewIdlingResource.java</span></div><h1>RecycleViewIdlingResource.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.IdlingResource;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>RecycleViewIdlingResource.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.IdlingResource</a> &gt; <span class="el_source">RecycleViewIdlingResource.java</span></div><h1>RecycleViewIdlingResource.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.IdlingResource;
 
 import android.support.annotation.Nullable;
 import android.support.test.espresso.IdlingResource;
@@ -35,28 +32,28 @@ import java.util.concurrent.atomic.AtomicBoolean;
  * ------------------------------------------------------------------------------
  */
 
-<span class="fc" id="L35">public class RecycleViewIdlingResource implements IdlingResource {</span>
+<span class="nc" id="L35">public class RecycleViewIdlingResource implements IdlingResource {</span>
 
     @Nullable
     private volatile ResourceCallback mCallback;
 
     // Idleness is controlled with this boolean.
-<span class="fc" id="L41">    private AtomicBoolean mIsIdleNow = new AtomicBoolean(true);</span>
+<span class="nc" id="L41">    private AtomicBoolean mIsIdleNow = new AtomicBoolean(true);</span>
 
     @Override
     public String getName() {
-<span class="fc" id="L45">        return this.getClass().getName();</span>
+<span class="nc" id="L45">        return this.getClass().getName();</span>
     }
 
     @Override
     public boolean isIdleNow() {
-<span class="fc" id="L50">        return mIsIdleNow.get();</span>
+<span class="nc" id="L50">        return mIsIdleNow.get();</span>
     }
 
     @Override
     public void registerIdleTransitionCallback(ResourceCallback callback) {
-<span class="fc" id="L55">        mCallback = callback;</span>
-<span class="fc" id="L56">    }</span>
+<span class="nc" id="L55">        mCallback = callback;</span>
+<span class="nc" id="L56">    }</span>
 
     /**
      * Sets the new idle state, if isIdleNow is true, it pings the {@link ResourceCallback}.
