--- a/reports/debug/org.flyve.inventory.agent.utils/ConnectionHTTP.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/ConnectionHTTP.java.html
@@ -1,7 +1,4 @@
----
-layout: coverage
----
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../resources/report.css" type="text/css"/><link rel="shortcut icon" href="../resources/report.gif" type="image/gif"/><title>ConnectionHTTP.java</title><link rel="stylesheet" href="../resources/prettify.css" type="text/css"/><script type="text/javascript" src="../resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">ConnectionHTTP.java</span></div><h1>ConnectionHTTP.java</h1><pre class="source lang-java linenums">/*
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>ConnectionHTTP.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">ConnectionHTTP.java</span></div><h1>ConnectionHTTP.java</h1><pre class="source lang-java linenums">/*
  *   Copyright © 2017 Teclib. All rights reserved.
  *
  * This file is part of flyve-mdm-android-agent
@@ -153,31 +150,32 @@ import java.util.Map;
 <span class="nc" id="L150">			HttpURLConnection conn = (HttpURLConnection)dataURL.openConnection();</span>
 
 <span class="nc" id="L152">			conn.setRequestMethod(&quot;POST&quot;);</span>
-<span class="nc" id="L153">			conn.setConnectTimeout(timeout);</span>
-<span class="nc" id="L154">			conn.setReadTimeout(readtimeout);</span>
+<span class="nc" id="L153">			conn.setRequestProperty(&quot;Content-Type&quot;, &quot;application/json; charset=UTF-8&quot;);</span>
+<span class="nc" id="L154">			conn.setConnectTimeout(timeout);</span>
+<span class="nc" id="L155">			conn.setReadTimeout(readtimeout);</span>
 
 			// Send post request
-<span class="nc" id="L157">			conn.setDoOutput(true);</span>
+<span class="nc" id="L158">			conn.setDoOutput(true);</span>
 
-<span class="nc" id="L159">			DataOutputStream os = new DataOutputStream(conn.getOutputStream());</span>
-<span class="nc" id="L160">			os.writeBytes(data);</span>
-<span class="nc" id="L161">			os.flush();</span>
-<span class="nc" id="L162">			os.close();</span>
+<span class="nc" id="L160">			DataOutputStream os = new DataOutputStream(conn.getOutputStream());</span>
+<span class="nc" id="L161">			os.writeBytes(data);</span>
+<span class="nc" id="L162">			os.flush();</span>
+<span class="nc" id="L163">			os.close();</span>
 
-<span class="nc bnc" id="L164" title="All 2 branches missed.">			if(conn.getResponseCode() &gt;= 400) {</span>
-<span class="nc" id="L165">				InputStream is = conn.getErrorStream();</span>
-<span class="nc" id="L166">				return inputStreamToString(is);</span>
+<span class="nc bnc" id="L165" title="All 2 branches missed.">			if(conn.getResponseCode() &gt;= 400) {</span>
+<span class="nc" id="L166">				InputStream is = conn.getErrorStream();</span>
+<span class="nc" id="L167">				return inputStreamToString(is);</span>
 			}
 
-<span class="nc" id="L169">			InputStream is = conn.getInputStream();</span>
-<span class="nc" id="L170">			return inputStreamToString(is);</span>
+<span class="nc" id="L170">			InputStream is = conn.getInputStream();</span>
+<span class="nc" id="L171">			return inputStreamToString(is);</span>
 
 		}
-<span class="nc" id="L173">		catch (final Exception ex)</span>
+<span class="nc" id="L174">		catch (final Exception ex)</span>
 		{
-<span class="nc" id="L175">			String error = &quot;EXCEPTION_HTTP_&quot; + ex.getMessage();</span>
-<span class="nc" id="L176">			FlyveLog.e(error);</span>
-<span class="nc" id="L177">			return error;</span>
+<span class="nc" id="L176">			String error = &quot;EXCEPTION_HTTP_&quot; + ex.getMessage();</span>
+<span class="nc" id="L177">			FlyveLog.e(error);</span>
+<span class="nc" id="L178">			return error;</span>
 		}
 	}
 
@@ -188,14 +186,14 @@ import java.util.Map;
 	 * @throws IOException error
 	 */
 	private static String inputStreamToString(final InputStream stream) throws IOException {
-<span class="nc" id="L188">		BufferedReader br = new BufferedReader(new InputStreamReader(stream, &quot;UTF-8&quot;));</span>
-<span class="nc" id="L189">		StringBuilder sb = new StringBuilder();</span>
-<span class="nc" id="L190">		String line = null;</span>
-<span class="nc bnc" id="L191" title="All 2 branches missed.">		while ((line = br.readLine()) != null) {</span>
-<span class="nc" id="L192">			sb.append(line + &quot;\n&quot;);</span>
+<span class="nc" id="L189">		BufferedReader br = new BufferedReader(new InputStreamReader(stream, &quot;UTF-8&quot;));</span>
+<span class="nc" id="L190">		StringBuilder sb = new StringBuilder();</span>
+<span class="nc" id="L191">		String line = null;</span>
+<span class="nc bnc" id="L192" title="All 2 branches missed.">		while ((line = br.readLine()) != null) {</span>
+<span class="nc" id="L193">			sb.append(line + &quot;\n&quot;);</span>
 		}
-<span class="nc" id="L194">		br.close();</span>
-<span class="nc" id="L195">		return sb.toString();</span>
+<span class="nc" id="L195">		br.close();</span>
+<span class="nc" id="L196">		return sb.toString();</span>
 	}
 
 	/**
