--- a/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
@@ -1,7 +1,4 @@
----
-layout: coverage
----
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../resources/report.css" type="text/css"/><link rel="shortcut icon" href="../resources/report.gif" type="image/gif"/><title>Helpers.java</title><link rel="stylesheet" href="../resources/prettify.css" type="text/css"/><script type="text/javascript" src="../resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">Helpers.java</span></div><h1>Helpers.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.utils;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>Helpers.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">Helpers.java</span></div><h1>Helpers.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.utils;
 
 import android.app.Activity;
 import android.app.ActivityManager;
@@ -18,9 +15,9 @@ import android.support.design.widget.Snackbar;
 import android.support.v4.app.NotificationCompat;
 import android.view.View;
 
+import org.flyve.inventory.agent.AboutActivity;
 import org.flyve.inventory.agent.MainActivity;
 import org.flyve.inventory.agent.R;
-import org.json.JSONObject;
 
 import static android.app.ActivityManager.RunningAppProcessInfo.IMPORTANCE_FOREGROUND;
 import static android.app.ActivityManager.RunningAppProcessInfo.IMPORTANCE_VISIBLE;
@@ -145,6 +142,20 @@ public class Helpers {
 <span class="nc" id="L142">        StringBuilder sb = new StringBuilder(str.toLowerCase());</span>
 <span class="nc" id="L143">        sb.setCharAt(0, Character.toUpperCase(sb.charAt(0)));</span>
 <span class="nc" id="L144">        return sb.toString();</span>
+    }
+
+    public static String getAgentDescription(Context context) {
+
+<span class="fc" id="L149">        EnvironmentInfo enviromentInfo = new EnvironmentInfo(context);</span>
+
+<span class="fc" id="L151">        String name = &quot;Inventory Agent/&quot;;</span>
+<span class="fc" id="L152">        String versionApp = enviromentInfo.getVersion();</span>
+<span class="fc" id="L153">        String type = &quot;Linux&quot;;</span>
+<span class="fc" id="L154">        String versionAndroid = &quot;Android &quot; + Build.VERSION.RELEASE;</span>
+<span class="fc" id="L155">        String app = &quot;Flyve MDM&quot;;</span>
+
+        // Inventory Agent/0.2.0[568] (Linux; Android 4.0.4; Flyve MDM)
+<span class="fc" id="L158">        return name + versionApp + &quot; (&quot; + type + &quot;; &quot; + versionAndroid + &quot;; &quot; + app + &quot;)&quot;;</span>
     }
 
 }
