--- a/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
@@ -1,7 +1,4 @@
----
-layout: coverage
----
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../resources/report.css" type="text/css"/><link rel="shortcut icon" href="../resources/report.gif" type="image/gif"/><title>Helpers.java</title><link rel="stylesheet" href="../resources/prettify.css" type="text/css"/><script type="text/javascript" src="../resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">Helpers.java</span></div><h1>Helpers.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.utils;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../.resources/report.gif" type="image/gif"/><title>Helpers.java</title><link rel="stylesheet" href="../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=0;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../.sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">debugAndroidTest</a> &gt; <a href="index.source.html" class="el_package">org.flyve.inventory.agent.utils</a> &gt; <span class="el_source">Helpers.java</span></div><h1>Helpers.java</h1><pre class="source lang-java linenums">package org.flyve.inventory.agent.utils;
 
 import android.app.Activity;
 import android.app.ActivityManager;
@@ -84,8 +81,8 @@ public class Helpers {
 <span class="nc" id="L81">    }</span>
 
     public static String splitCamelCase(String s) {
-<span class="nc" id="L84">        return capitalize(s.replaceAll(</span>
-<span class="nc" id="L85">                String.format(&quot;%s|%s|%s&quot;,</span>
+<span class="fc" id="L84">        return capitalize(s.replaceAll(</span>
+<span class="fc" id="L85">                String.format(&quot;%s|%s|%s&quot;,</span>
                         &quot;(?&lt;=[A-Z])(?=[A-Z][a-z])&quot;,
                         &quot;(?&lt;=[^A-Z])(?=[A-Z])&quot;,
                         &quot;(?&lt;=[A-Za-z])(?=[^A-Za-z])&quot;
@@ -142,9 +139,9 @@ public class Helpers {
 <span class="nc" id="L139">    }</span>
 
     public static String capitalize(String str) {
-<span class="nc" id="L142">        StringBuilder sb = new StringBuilder(str.toLowerCase());</span>
-<span class="nc" id="L143">        sb.setCharAt(0, Character.toUpperCase(sb.charAt(0)));</span>
-<span class="nc" id="L144">        return sb.toString();</span>
+<span class="fc" id="L142">        StringBuilder sb = new StringBuilder(str.toLowerCase());</span>
+<span class="fc" id="L143">        sb.setCharAt(0, Character.toUpperCase(sb.charAt(0)));</span>
+<span class="fc" id="L144">        return sb.toString();</span>
     }
 
     public static String getAgentDescription(Context context) {
