--- a/reports/debug/org.flyve.inventory.agent/MainActivity.java.html
+++ b/reports/debug/org.flyve.inventory.agent/MainActivity.java.html
@@ -15,9 +15,9 @@ import org.flyve.inventory.agent.utils.FlyveLog;
 /*
  *   Copyright © 2017 Teclib. All rights reserved.
  *
- *   This file is part of flyve-mdm-android-inventory-agent
+ *   This file is part of android-inventory-agent
  *
- * flyve-mdm-android-inventory-agent is a subproject of Flyve MDM. Flyve MDM is a mobile
+ * android-inventory-agent is a subproject of Flyve MDM. Flyve MDM is a mobile
  * device management software.
  *
  * Flyve MDM is free software: you can redistribute it and/or
@@ -34,7 +34,7 @@ import org.flyve.inventory.agent.utils.FlyveLog;
  * @date      27/9/17
  * @copyright Copyright © 2017 Teclib. All rights reserved.
  * @license   GPLv3 https://www.gnu.org/licenses/gpl-3.0.html
- * @link      https://github.com/flyve-mdm/flyve-mdm-android-inventory-agent
+ * @link      https://github.com/flyve-mdm/android-inventory-agent
  * @link      https://flyve-mdm.com
  * ------------------------------------------------------------------------------
  */
