docs(fdroid): change link to download
Signed-off-by: Naylin <nmedina@teclib.com>

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ layout: home
           </div>
 
           <div class="btn-group">
-            <a class="btn btn-primary" href="https://github.com/flyve-mdm/android-inventory-agent/releases/latest">
+            <a class="btn btn-primary" href="https://f-droid.org/packages/org.flyve.inventory.agent/">
               Download 
             </a>
           </div>
