--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ layout: home
   <div class="jumbotron theme-default">
     <div class="container">
       <h3>Great!</h3>
-        <p>Be the first to know <a href='http://flyve.org/android-inventory-agent/howtos/workflow'>Flyve MDM Workflow</a>, you'll learn how we run our projects. <br /></p>
-        <p><a href="http://flyve.org/android-inventory-agent/howtos/contribute">Join our Community</a>, you can make Flyve MDM better by testing, developing our source code or <a href="http://flyve.org/android-inventory-agent/howtos/contribute-translating">translating</a> the project. <br /></p>
+        <p>Be the first to know <a href='https://glpi-project.github.io/android-inventory-agent/howtos/workflow'>Flyve MDM Workflow</a>, you'll learn how we run our projects. <br /></p>
+        <p><a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute">Join our Community</a>, you can make Flyve MDM better by testing, developing our source code or <a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute-translating">translating</a> the project. <br /></p>
     </div>
   </div>
