--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ layout: home
     </div>
   </div>
 
-  <div class="jumbotron theme-default">
+  <!--<div class="jumbotron theme-default">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-md-push-12 text-center">
@@ -784,7 +784,7 @@ layout: home
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   
   <div class="jumbotron theme-light">
     <div class="container">
@@ -816,7 +816,7 @@ layout: home
     <div class="container">
       <div class="row">
         <div class="col-md-24 text-center">
-          <h3>Want to Contribute to Flyve MDM? </h3>
+          <h3>Want to Contribute to Android inventory Agent ? </h3>
         </div>
       </div>
     </div>
@@ -825,7 +825,7 @@ layout: home
   <div class="jumbotron theme-default">
     <div class="container">
       <h3>Great!</h3>
-        <p>Be the first to know <a href='https://glpi-project.github.io/android-inventory-agent/howtos/workflow'>Flyve MDM Workflow</a>, you'll learn how we run our projects. <br /></p>
-        <p><a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute">Join our Community</a>, you can make Flyve MDM better by testing, developing our source code or <a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute-translating">translating</a> the project. <br /></p>
+        <p>Be the first to know <a href='https://glpi-project.github.io/android-inventory-agent/howtos/workflow'>Android Inventory Agent Workflow</a>, you'll learn how we run our projects. <br /></p>
+        <p><a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute">Join our Community</a>, you can make Android Inventory Agent better by testing, developing our source code or <a href="https://glpi-project.github.io/android-inventory-agent/howtos/contribute-translating">translating</a> the project. <br /></p>
     </div>
   </div>
