fix(content): fix reference
Signed-off-by: Teclib <skita@teclib.com>

--- a/pages/howtos.html
+++ b/pages/howtos.html
@@ -8,7 +8,7 @@ title: How-tos
 
 <p>
   Here you’ll find all the information you need to
-  start using Flyve MDM Web Dashboard,
+  start using GLPI Android Inventory Agent
   check through our index the articles where
   we explain easily the requirements, installation steps,
   contributing steps and many more!
